[package]
name = "kapow"
version = "2.22.4"
edition = "2024"
authors = ["qtfkwk <qtfkwk@gmail.com>"]
repository = "https://github.com/qtfkwk/kapow"
description = "Template processor"
license = "MIT"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
dtg-lib = "6.4.3"
path-slash = "0.2.1"
regex = "1.12.2"
termwrap = "0.2.2"
which = "8.0.0"

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.3"
