[package]
name = "kapow"
version = "2.22.6"
edition = "2024"
authors = ["qtfkwk <qtfkwk@gmail.com>"]
repository = "https://github.com/qtfkwk/kapow"
description = "Template processor"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
dtg-lib = "6.4.5"
path-slash = "0.2.1"
regex = "1.12.3"
termwrap = "0.2.3"
which = "8.0.2"

[target.'cfg(unix)'.dependencies]
pager2 = "0.6.5"
